[project]
name = "WHOSpeeches"
description = "Gen 2 service for retrieving the WHO's Director General's Speeches"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
  {name = "Mark Newman", email = "mnewman@harrisburgu.edu" },
  {name = "Stanley Nwoji", email = "snwoji@harrisburgu.edu"}
]
maintainers = [
  {name = "Mark Newman", email = "mnewman@harrisburgu.edu" }
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic"
]

requires-python = ">=3.11"
dependencies = [
  "jsonlines>=1.2.0,<2.0.0",
  "lxml>=4.5.0,<5.0.0",
  "progressbar2>=3.51.4,<4.0.0",
  "protego>=0.1.16,<0.2.0",
  "requests>=2.23.0,<3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/WHOSpeeches/data"
"Bug Reports" = "https://github.com/WHOSpeeches/data/issues"
"Source" = "https://github.com/WHOSpeeches/data"

[project.scripts]
WHOSpeeches = "WHOSpeeches.__main__:main"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "WHOSpeeches.__init__.__version__"}
